--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "bcryptjs": "^3.0.2",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
