--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "scheme": "REcipe",
+    "scheme": "recipe",
     "name": "REcipe",
     "slug": "REcipe",
     "version": "1.0.0",
@@ -25,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
