--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^3.0.2",
-    "expo": "~53.0.20",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-modal": "^14.0.0-rc.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-url-polyfill": "^2.0.0"
+    "expo": "^54.0.6",
+    "expo-constants": "~18.0.8",
+    "expo-crypto": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.3",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "@expo/metro-runtime": "~6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
