--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^3.0.2",
-    "expo": "^54.0.8",
-    "expo-constants": "^18.0.9",
+    "expo": "^54.0.9",
+    "expo-constants": "~18.0.8",
     "expo-crypto": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "^6.0.6",
+    "expo-router": "~6.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
+    "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.21.1"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
