--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.13.0",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
