--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "expo-router": "~6.0.8",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
