--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^3.0.2",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.8",
     "expo-crypto": "~15.0.7",
     "expo-font": "^14.0.8",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-manipulator": "^14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
