AI recipe generation integration, cron job, push to notification, and  caching:
>working ai recipe generation (needs to test more for image generation and with items in pantry )
>added cron job for caching using cronjob.org
>push to notifcation started (using fcm and cronjob.org)
>moved caching to supabase.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+#google-services
+google-services.json
+
+#markdown and text files
+*.md
+*.mdx
+*.txt
