--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^3.0.2",
     "expo": "~54.0.10",
-    "expo-constants": "~18.0.8",
+    "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-device": "~8.0.9",
     "expo-font": "^14.0.8",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.8",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -35,7 +38,9 @@
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
