--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-router": "~6.0.8",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.546.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -34,7 +35,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "^15.14.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.0"
   },
