pantry fix/additions: > brokedown pantry into components > implemented pantry items and grouping into database > implemented notification for expiring items > implemented filtering and searching of pantry items and groups > implemented group and item image > implemented automatic color addition
all these items needs further testing

--- a/app.json
+++ b/app.json
@@ -23,7 +23,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "RECEIVE_BOOT_COMPLETED",
+        "WAKE_LOCK",
+        "VIBRATE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
