--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^3.0.2",
     "expo": "~54.0.10",
+    "expo-background-fetch": "~14.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
@@ -26,6 +27,7 @@
     "expo-router": "~6.0.8",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.8",
     "lucide-react-native": "^0.546.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
