--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "~5.6.0",
