--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bcryptjs": "^3.0.2",
     "expo": "~54.0.10",
     "expo-background-fetch": "~14.0.7",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
