--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ python-multipart==0.0.9
 Pillow==10.4.0
 ultralytics==8.2.103
 requests==2.31.0
+pytesseract==0.3.10
 
 # IMPORTANT: Install PyTorch separately for your GPU/CPU.
 # For NVIDIA GTX 1650 (Turing), use CUDA 11.x compatible builds.
