--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.14.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.21.0"
+    "react-native-vision-camera": "^4.7.2",
+    "react-native-web": "^0.21.0",
+    "vision-camera-ocr": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
