--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,13 @@ Pillow==10.4.0
 ultralytics==8.2.103
 requests==2.31.0
 pytesseract==0.3.10
+python-dotenv==1.0.0
 
-# IMPORTANT: Install PyTorch separately for your GPU/CPU.
-# For NVIDIA GTX 1650 (Turing), use CUDA 11.x compatible builds.
-# See https://pytorch.org/get-started/locally/ for the exact command.
-# Example (Windows, CUDA 11.8):
-# pip install --index-url https://download.pytorch.org/whl/cu118 torch torchvision torchaudio
+# PyTorch for CPU (EC2 default)
+# For CPU-only (EC2 without GPU)
+torch==2.1.0
+torchvision==0.16.0
+
+# If you have GPU on EC2, replace above with:
+# torch --index-url https://download.pytorch.org/whl/cu118
+# torchvision --index-url https://download.pytorch.org/whl/cu118
