--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-font": "^14.0.8",
-    "expo-image-manipulator": "^14.0.7",
+    "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
@@ -45,7 +45,8 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.7.2",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
