--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~54.0.23",
     "expo-application": "^7.0.7",
     "expo-background-fetch": "~14.0.7",
+    "expo-build-properties": "^1.0.9",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
