--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
