--- a/.github/workflows/automated-testing.yml
+++ b/.github/workflows/automated-testing.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [automated-testing, development, main]
   schedule:
-    - cron: '0 0 * * *' # Daily at midnight
+    - cron: "0 0 * * *" # Daily at midnight
 
 jobs:
   # 1. SECURITY TESTING
@@ -16,15 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          
+          node-version: "18"
+
       - name: Install dependencies
         run: npm ci
-      
+
       # Snyk Security Scan
       - name: Run Snyk Security Scan
         uses: snyk/actions/node@master
@@ -33,16 +33,16 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --severity-threshold=high --json-file-output=snyk-report.json
-      
+
       # OWASP Dependency Check
       - name: OWASP Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
         with:
-          project: 'REcipe-App'
-          path: '.'
-          format: 'HTML'
-          out: 'reports'
-      
+          project: "REcipe-App"
+          path: "."
+          format: "HTML"
+          out: "reports"
+
       # Upload security reports
       - name: Upload Security Reports
         uses: actions/upload-artifact@v3
@@ -52,7 +52,7 @@ jobs:
             snyk-report.json
             reports/
           retention-days: 30
-      
+
       # Upload to Better Stack (optional, if token provided)
       - name: Send Results to Better Stack
         if: secrets.BETTERSTACK_TOKEN != ''
@@ -62,27 +62,27 @@ jobs:
             -H "Content-Type: application/json" \
             -d "{\"message\": \"Security scan completed\", \"level\": \"info\", \"metadata\": $(cat snyk-report.json)}"
         continue-on-error: true
-      
+
       # Generate security badge
       - name: Generate Security Badge
         run: |
           echo "Security scan completed" > security-status.txt
-          
+
   # 2. PERFORMANCE & EFFICIENCY TESTING
   performance-testing:
     name: ⚡ Performance & Efficiency Testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          
+          node-version: "18"
+
       - name: Install dependencies
         run: npm ci
-      
+
       # Lighthouse CI for Performance
       - name: Lighthouse CI
         uses: treosh/lighthouse-ci-action@v9
@@ -91,18 +91,18 @@ jobs:
             http://localhost:19006
           uploadArtifacts: true
           temporaryPublicStorage: true
-      
+
       # Bundle size analysis
       - name: Analyze Bundle Size
         run: |
           npm run build || echo "Build step skipped"
           npx react-native-bundle-visualizer || echo "Bundle analysis skipped"
-      
+
       # Performance metrics
       - name: Generate Performance Report
         run: |
           node scripts/performance-test.js || echo "Performance test created"
-      
+
       - name: Upload Performance Reports
         uses: actions/upload-artifact@v3
         with:
@@ -118,24 +118,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          
+          node-version: "18"
+
       - name: Install dependencies
         run: npm ci
-      
+
       # Run Jest tests for reliability
       - name: Run Unit Tests
         run: npm test -- --coverage --json --outputFile=test-results.json
         continue-on-error: true
-      
+
       # Data integrity tests
       - name: Run Integrity Tests
         run: node scripts/integrity-test.js || echo "Integrity test created"
-      
+
       # Upload test results
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
@@ -145,7 +145,7 @@ jobs:
             test-results.json
             coverage/
           retention-days: 30
-      
+
       # Code Coverage with Codecov
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3
@@ -162,24 +162,24 @@ jobs:
     strategy:
       matrix:
         api-level: [26, 28, 29, 30, 31, 33, 34]
-        device: ['Pixel2', 'Pixel4', 'Pixel6']
+        device: ["Pixel2", "Pixel4", "Pixel6"]
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          
+          node-version: "18"
+
       - name: Install dependencies
         run: npm ci
-      
+
       # Build APK
       - name: Build Android APK
         run: |
           echo "Building APK for Android API ${{ matrix.api-level }}"
           npm run build:android || echo "Build command configured"
-      
+
       # Test on different Android versions
       - name: Test Android API ${{ matrix.api-level }}
         run: |
@@ -188,7 +188,7 @@ jobs:
           echo "API Level: ${{ matrix.api-level }}" >> portability-results.txt
           echo "Status: PASS" >> portability-results.txt
           echo "---" >> portability-results.txt
-      
+
       - name: Upload Portability Report
         uses: actions/upload-artifact@v3
         with:
@@ -202,27 +202,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          
+          node-version: "18"
+
       - name: Install dependencies
         run: npm ci
-      
+
       # Image recognition accuracy tests
       - name: Test Image Recognition Accuracy
         run: node scripts/accuracy-test.js || echo "Accuracy test created"
-      
+
       # OCR accuracy tests
       - name: Test OCR Accuracy
         run: node scripts/ocr-accuracy-test.js || echo "OCR test created"
-      
+
       # Recipe suggestion relevance
       - name: Test Recipe Suggestions
         run: node scripts/recipe-accuracy-test.js || echo "Recipe test created"
-      
+
       - name: Upload Accuracy Reports
         uses: actions/upload-artifact@v3
         with:
@@ -236,27 +236,34 @@ jobs:
   # 6. GENERATE VISUAL REPORTS
   generate-reports:
     name: 📊 Generate Visual Reports
-    needs: [security-scan, performance-testing, reliability-testing, portability-testing, accuracy-testing]
+    needs:
+      [
+        security-scan,
+        performance-testing,
+        reliability-testing,
+        portability-testing,
+        accuracy-testing,
+      ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Download All Artifacts
         uses: actions/download-artifact@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-      
+          node-version: "18"
+
       - name: Install Report Generator
         run: npm install -g allure-commandline
-      
+
       # Generate comprehensive HTML report
       - name: Generate HTML Report
         run: |
           node scripts/generate-report.js || echo "Report generator created"
-      
+
       # Create GitHub Pages deployment
       - name: Deploy Reports to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -264,7 +271,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./reports
           destination_dir: test-reports
-      
+
       # Generate badges
       - name: Generate Test Badges
         run: |
@@ -273,7 +280,7 @@ jobs:
           echo "![Coverage](https://img.shields.io/badge/coverage-84%25-green)" > badges/coverage.md
           echo "![Security](https://img.shields.io/badge/security-A-brightgreen)" > badges/security.md
           echo "![Performance](https://img.shields.io/badge/performance-94%2F100-brightgreen)" > badges/performance.md
-      
+
       - name: Upload Final Reports
         uses: actions/upload-artifact@v3
         with:
@@ -282,7 +289,7 @@ jobs:
             reports/
             badges/
           retention-days: 90
-      
+
       # Comment on PR with results
       - name: Comment Test Results on PR
         if: github.event_name == 'pull_request'
@@ -291,7 +298,7 @@ jobs:
           script: |
             const report = `
             ## 🎯 Automated Test Results
-            
+
             ### ✅ Test Summary
             - 🔒 **Security:** PASS - No high severity vulnerabilities
             - ⚡ **Performance:** PASS - 94/100 Lighthouse score
@@ -301,16 +308,16 @@ jobs:
             - 🔐 **Integrity:** PASS - Data consistency verified
             - 🎯 **Accuracy:** PASS - 87% image recognition accuracy
             - 🚀 **Efficiency:** PASS - < 2s load time
-            
+
             ### 📊 Detailed Reports
             [View Full Report](https://g-russo.github.io/REcipe/test-reports/)
-            
+
             ### 📈 Coverage
             ![Coverage](https://codecov.io/gh/g-russo/REcipe/branch/automated-testing/graph/badge.svg)
-            
+
             All automated tests passed! ✅
             `;
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
