--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
-fastapi==0.112.0
-uvicorn[standard]==0.30.1
-python-multipart==0.0.9
-Pillow==10.4.0
-ultralytics==8.2.103
-requests==2.31.0
-pytesseract==0.3.10
-python-dotenv==1.0.0
+fastapi
+uvicorn[standard]
+python-multipart
+Pillow
+ultralytics
+requests
+pytesseract
+python-dotenv
+google-generativeai
 
-# PyTorch for CPU (Python 3.12 compatible)
-torch==2.5.1
-torchvision==0.20.1
+# Let pip resolve the best compatible version for your Python version
+torch
+torchvision
