--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:allowBackup="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.App.SplashScreen"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config">
         
