fix: add Hermes engine and update Android build configurations in app config; improve splash screen handling in background initialization

--- a/eas.json
+++ b/eas.json
@@ -18,7 +18,8 @@
         "EXPO_PUBLIC_FOOD_API_URL": "http://54.153.205.43:8000",
         "EXPO_PUBLIC_APP_ENV": "development",
         "EXPO_PUBLIC_FATSECRET_CLIENT_ID": "7546d922e502421f848438016a49c932",
-        "EXPO_PUBLIC_FATSECRET_CLIENT_SECRET": "bdd0493313194688a49a6f1648030834"
+        "EXPO_PUBLIC_FATSECRET_CLIENT_SECRET": "bdd0493313194688a49a6f1648030834",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "AIzaSyBBcfNuo5pwM-njy8yrI4hAq3eRbOf3RGQ"
       }
     },
     "preview": {
@@ -34,7 +35,8 @@
         "EXPO_PUBLIC_FOOD_API_URL": "http://54.153.205.43:8000",
         "EXPO_PUBLIC_APP_ENV": "preview",
         "EXPO_PUBLIC_FATSECRET_CLIENT_ID": "7546d922e502421f848438016a49c932",
-        "EXPO_PUBLIC_FATSECRET_CLIENT_SECRET": "bdd0493313194688a49a6f1648030834"
+        "EXPO_PUBLIC_FATSECRET_CLIENT_SECRET": "bdd0493313194688a49a6f1648030834",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "AIzaSyBBcfNuo5pwM-njy8yrI4hAq3eRbOf3RGQ"
       }
     },
     "production": {
@@ -49,7 +51,8 @@
         "EXPO_PUBLIC_FOOD_API_URL": "http://54.153.205.43:8000",
         "EXPO_PUBLIC_APP_ENV": "production",
         "EXPO_PUBLIC_FATSECRET_CLIENT_ID": "7546d922e502421f848438016a49c932",
-        "EXPO_PUBLIC_FATSECRET_CLIENT_SECRET": "bdd0493313194688a49a6f1648030834"
+        "EXPO_PUBLIC_FATSECRET_CLIENT_SECRET": "bdd0493313194688a49a6f1648030834",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "AIzaSyBBcfNuo5pwM-njy8yrI4hAq3eRbOf3RGQ"
       }
     }
   },
