--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "~5.6.0",
